--- a/BeberguaLembrete/app/src/main/res/drawable/bg_degrade_button.xml
+++ b/BeberguaLembrete/app/src/main/res/drawable/bg_degrade_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="@android:color/holo_blue_dark"
-        android:centerColor="@android:color/background_light"
+        android:centerColor="@android:color/holo_blue_light"
         android:endColor="@android:color/holo_blue_bright"
         android:angle="360"
         />
