--- a/BeberguaLembrete/app/src/main/res/layout/activity_main.xml
+++ b/BeberguaLembrete/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
         android:layout_height="wrap_content"
         android:text="@string/text_button_calcular"
         android:layout_margin="20dp"
+        android:background= "@drawable/bg_degrade_button"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -110,7 +111,7 @@
         android:id="@+id/txt_resultado_ml"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="300,6 ml"
+        android:text="0.0"
         android:textSize="35sp"
         android:textColor="@android:color/holo_blue_dark"
         android:textStyle="bold"
